--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,134 +1,190 @@
-<?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="151dp"
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_row="5"
-        android:layout_column="3"
-        android:text="+" />
+        android:gravity="right"
+        android:text=""
+        android:textSize="70sp"/>
 
     <Button
+        android:layout_width="90dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:text="Clear"
+        />
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnCount="4"
+        android:rowCount="4">
+
+        <Button
+        android:id="@+id/button9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="2"
-        android:layout_column="0"
-        android:text="9" />
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="9"
+        android:textSize="40sp"
+        />
 
     <Button
+        android:id="@+id/button8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="3"
-        android:layout_column="1"
-        android:text="8" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="4"
-        android:layout_column="2"
-        android:text="7" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="3"
-        android:layout_column="0"
-        android:text="6" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:text="5" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="2"
-        android:layout_column="2"
-        android:text="4" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="4"
-        android:layout_column="0"
-        android:text="3" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="4"
-        android:layout_column="1"
-        android:text="2" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="3"
-        android:layout_column="2"
-        android:text="1" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="5"
-        android:layout_column="1"
-        android:text="." />
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="8"
+        android:textSize="40sp"
+        />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="5"
-        android:layout_column="0"
-        android:text="0" />
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="7"
+        android:textSize="40sp"
+        />
 
     <Button
-        android:id="@+id/button8"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_row="2"
-        android:layout_column="3"
-        android:text="/" />
-
-    <Button
-        android:id="@+id/button9"
+        android:id="@+id/buttonDivide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="5"
-        android:layout_column="2"
-        android:text="=" />
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="/"
+        android:textSize="40sp"
+        />
 
     <Button
-        android:id="@+id/button10"
-        android:layout_width="146dp"
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="3"
-        android:layout_column="3"
-        android:text="*" />
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="6"
+        android:textSize="40sp"
+        />
 
     <Button
-        android:id="@+id/button11"
-        android:layout_width="147dp"
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="4"
-        android:layout_column="3"
-        android:text="-" />
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="5"
+        android:textSize="40sp"
+        />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="4"
+        android:textSize="40sp"
+        />
+
+    <Button
+        android:id="@+id/buttonMultiply"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="*"
+        android:textSize="40sp"
+        />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="3"
+        android:textSize="40sp"
+        />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="2"
+        android:textSize="40sp"
+        />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="1"
+        android:textSize="40sp"
+        />
+
+    <Button
+        android:id="@+id/buttonSubtract"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="-"
+        android:textSize="40sp"
+        />
+
+    <Button
+        android:id="@+id/button0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="0"
+        android:textSize="40sp"
+        />
+    <Button
+        android:id="@+id/button."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="."
+        android:textSize="40sp"
+        />
+
+    <Button
+        android:id="@+id/buttonEquals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="="
+        android:textSize="40sp"
+        />
+
+    <Button
+        android:id="@+id/buttonAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_columnWeight="1"
+        android:text="+"
+        android:textSize="40sp"
+        />
+    </GridLayout>
 
 
-</GridLayout>
+</LinearLayout>
