--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/etText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
@@ -14,6 +15,7 @@
         android:textSize="70sp"/>
 
     <Button
+        android:id="@+id/btnClear"
         android:layout_width="90dp"
         android:layout_height="40dp"
         android:layout_gravity="right"
@@ -27,163 +29,163 @@
         android:rowCount="4">
 
         <Button
-        android:id="@+id/button9"
+        android:id="@+id/btn9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
         android:text="9"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/btn8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="8"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/btn7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="7"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/buttonDivide"
+        android:id="@+id/btnDivide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="/"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="6"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="5"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="4"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/buttonMultiply"
+        android:id="@+id/btnMultiply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="*"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="3"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="2"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="1"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/buttonSubtract"
+        android:id="@+id/btnSubtract"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="-"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/button0"
+        android:id="@+id/btn0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="0"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
     <Button
-        android:id="@+id/button."
+        android:id="@+id/buttonPoint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="."
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/buttonEquals"
+        android:id="@+id/btnEquals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_rowWeight="1"
         android:layout_columnWeight="1"
         android:text="="
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
 
     <Button
-        android:id="@+id/buttonAdd"
+        android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
         android:text="+"
-        android:textSize="40sp"
-        />
+        android:textSize="40sp"/>
     </GridLayout>
 
 
